<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    android:label="@string/main_fragment_label"
    app:startDestination="@id/MainFragment">

    <fragment
        android:id="@+id/MainFragment"
        android:name="com.portfolio.proximityalerts.MainFragment"
        android:label="@string/main_fragment_label">

        <action
            android:id="@+id/action_MainFragment_to_settingsFragment"
            app:destination="@id/settingsFragment" />
        <action
            android:id="@+id/action_MainFragment_to_ListFragment"
            app:destination="@id/ListFragment" />
    </fragment>
    <fragment
        android:id="@+id/settingsFragment"
        android:name="com.portfolio.proximityalerts.SettingsFragment"
        android:label="@string/settings_label" >
    </fragment>

    <fragment
        android:id="@+id/ListFragment"
        android:name="com.portfolio.proximityalerts.TargetListFragment"
        android:label="@string/toolbar_title_target_list" >
    </fragment>
</navigation>