<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/text_board_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/title_speed"
            style="@style/GreenText"
            android:textSize="18sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="start"
            android:text="@string/dashboard_speed"
            app:fontFamily="@font/digital_7" />

        <TextView
            android:id="@+id/title_direction"
            style="@style/GreenText"
            android:textSize="18sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="end"
            android:text="@string/dashboard_direction"
            app:fontFamily="@font/digital_7" />
    </LinearLayout>

    <Space
        android:layout_width="match_parent"
        android:layout_height="5dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="13dp"
        android:layout_marginEnd="13dp"
        android:orientation="horizontal">

        <TextView
            style="@style/GreenText"
            android:textSize="15sp"
            app:fontFamily="@font/digital_7"
            android:id="@+id/display_speed"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/not_available_shrt" />

        <TextView
            style="@style/GreenText"
            android:textSize="15sp"
            app:fontFamily="@font/digital_7"
            android:id="@+id/tv_display_direction"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="end"
            android:layout_weight="1"
            android:text="@string/not_available_shrt" />
    </LinearLayout>
</LinearLayout>